--- a/src/components/Navigation/SideDrawer/SideDrawer.css
+++ b/src/components/Navigation/SideDrawer/SideDrawer.css
@@ -19,13 +19,14 @@
 }
 
 .Open {
-    transform: transateX(0);
+    transform: translateX(0);
 }
 
 .Close {
-    transform: transateX(-100%);
+    transform: translateX(-100%);
 }
 
 .Logo {
     height: 11%;
+    margin-bottom: 32px;
 }
