--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -1,7 +1,7 @@
 .Input {
     width: 100%;
     padding: 10px;
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 .Label {
@@ -24,4 +24,9 @@
 .InputElement:focus {
     outline: none;
     background-color: #ccc;
+}
+
+.Invalid {
+    border: 1px solid red;
+    background-color: #FDA49A;
 }
